Issue #28822: Adjust indices handling of PyUnicode_FindChar().